--- a/1-js-warmups.html
+++ b/1-js-warmups.html
@@ -471,14 +471,31 @@ function encodeStr(aString){
 				return 1;
 			} else if (value.toLowerCase() === "s") {
 				return "$";
-			} else {
+			} else {//THE REST OF THE VALUES ACCOUNTED FOR.
 				return value;//for the rest of the word.
 			}
 				});
 return newArr2.join("");
 }
-//how do you return the whole value plus the new index item...? you're missing the else....the other characters are the other letters in the whole word
+//how do you return the whole value plus the new index item...? you're missing the else statement....the other characters are the other letters in the whole word
 	//
+	
+	
+	// Chris Berry:owl:  9:42 AM
+	// function encodeStr(str){
+	// 	str = str.replace(/[aA]/g, "@");
+	// 	str = str.replace(/[iI]/g, "1");
+	// 	str = str.replace(/[sS]/g, "$");
+	// 	return str;
+	// }
+	//
+	// Nick Gilmore  9:43 AM
+	// var lowercase = e.toLowerCase()
+	//
+	// var newString = lowercase.replaceAll('a', '@').replaceAll('i', "1").replaceAll('s', '$');
+	// console.log(newString);
+	//
+	
 	console.log(encodeStr('apple')); // returns ‘@pple’
 	console.log(encodeStr('codeup')); // returns ‘codeup’
 	console.log(encodeStr('SASS')); // returns ‘$@$$’
