--- a/1-js-warmups.html
+++ b/1-js-warmups.html
@@ -566,7 +566,7 @@
 		let total = "";
 		users.forEach((value, index, array)=>{
 			total = value.salary += value.salary;
-			
+			return total
 		});
 		console.log(total/array.length);
 	};
