testing if github pushes are working.

--- a/1-js-warmups.html
+++ b/1-js-warmups.html
@@ -577,6 +577,8 @@
 	// 	const admins = users.filter((users)=>users.isAdmin);
 	// 	return admins.reduce((accum, curr)=>accum + curr.salary, 0/admins.length);
 	// }
+	
+	//testing if github pushes are working
 </script>
 </body>
 </html>
