--- a/1-dom-warmup.html
+++ b/1-dom-warmup.html
@@ -80,9 +80,7 @@
 <section>
 <script>
 	"use strict";
-	//TRY USING FOR EACH LATER SO IT GOES THROUGH THE SQUARES AND NOT INTERFERE WITH PREVIOUS EXERCISE.
 	function yellowSquares(){
-	const squares2 = document.getElementById('changingColors');
 	const squaresfor2 = document.querySelectorAll('div');
 	squaresfor2.forEach((element,index)=>{
 		console.log(element, index)
@@ -95,12 +93,9 @@
 	}
 	yellowSquares();
 	
+	function multiSquareColors(){
 	
-	// squares2.addEventListener('click', (e) => {
-	// 	squares2.classList.toggle('yellow');
-	// });
-	
-	//THIS SELECTED ALL THE DIVS WITH THE CLASS SQUARE
+	//SELECTED ALL THE DIVS WITH THE CLASS SQUARE
 	const squares = document.querySelectorAll('div.square');
 	//THIS WENT THROUGH ALL THOSE CLASSES AND ADDED THE CLICK EVENT, CHANGING THE COLORS DEPENDING ON THE INDEX.
 	const squareColors = squares.forEach((element, index, node) => {
@@ -114,31 +109,8 @@
 			}
 		})
 	});
-	//THIS SECTION IS OLD CODE THAT I STARTED OUT WITH FOR HOVERING, AND INSTRUCTORS METHOD.
-	// const blueSquare = document.getElementById("blueSquare");
-	// const redSquare = document.getElementById("redSquare");
-	// const greenSquare = document.getElementById("greenSquare");
-	// blueSquare.onmouseover = () => blueSquare.style.backgroundColor = "blue";
-	// blueSquare.onmouseleave = () => blueSquare.style.backgroundColor = "";
-	// redSquare.onmouseover = () => redSquare.style.backgroundColor = "red";
-	// redSquare.onmouseleave = () => redSquare.style.backgroundColor = "";
-	// greenSquare.onmouseover = () => greenSquare.style.backgroundColor = "green";
-	// greenSquare.onmouseleave = () => greenSquare.style.backgroundColor = "";
-	//
-	//---^---my answer...
-	//---v----instructor...
-	// document.querySelectorAll(".square").
-	// 		forEach(function(element){
-	// 			element.addEventListener("mouseenter", function(event){
-	// 				const targetColor = event.target.dataset.color;
-	// 				event.target.style.backgroundColor = targetColor;
-	// 			});
-	// 			element.addEventListener("mouseleave", function(event){
-	// 				event.target.style.backgroundColor = "";
-	// 			});
-	// });
-	//SECTION ABOVE IS OLD CODE THAT I STARTED OUT WITH FOR HOVERING, AND INSTRUCTORS METHOD.
-	
+	}
+	multiSquareColors();
 	
 	//I WANTED TO CREATE BUTTONS THAT CHANGED COLOR, AND LEARN THE DIFFERENCE BETWEEN BACKGROUNDCOLOR &
 	//THE WHOLE PAGES BACKGROUND COLOR. I WANTED TO KNOW HOW TO STYLE THE ACTUAL BUTTON
@@ -155,7 +127,8 @@
 	//THIS SELECTS ALL THE BUTTONS.
 	const buttonElements = document.querySelectorAll('button');
 	
-	//I DIDN'T WANT ALL THE BUTTONS TO DO THE SAME THING, SO I MADE IF/ELSE FUNCTIONS BASED ON THEIR INDEX NUMBER.
+	//IF/ELSE FUNCTIONS BASED ON THEIR INDEX NUMBER
+	// TO PREVENT SAME FUNCTION ON OTHER INDEXES.
 	buttonElements.forEach((element, index, notAnarray)=> {
 		//CONSOLE.LOG TO UNDERSTAND THE DIFFERENT PARAMETERS AND WHAT THEY RETRIEVED.
 		// console.log('Element: ', element, 'Index: ', index, 'nodeList? :', notAnarray);
@@ -177,8 +150,8 @@
 		}
 		});
 	
-	//THIS WAS ME TESTING OUT HOW TO GET THE BUTTON TO RESET THE SQUARE COLORS OUTSIDE THE ABOVE FUNCTION.
-	//I NEEDED TO GET THE SPECIFIC BUTTON SO I USED [3] ,
+	//GET THE BUTTON TO RESET THE SQUARE COLORS OUTSIDE THE ABOVE FUNCTION.
+	//NEEDED SPECIFIC BUTTON [3] ,
 	// buttonElements IS THE "const buttonElements = document.querySelectorAll('button');" ABOVE.
 	
 	// const resetButton = buttonElements[3];
@@ -212,145 +185,32 @@
 	
 	//toggle the squares from yellow to white
 	
-	// https://marked-meadow-provelone.glitch.me/
-	const glitchURL = 'https://marked-meadow-provelone.glitch.me/movies';
-	// const options = {
-	// 	method: 'POST',
-	// 	headers: {
-	// 		'Content-Type': 'application/json',
-	// 	},
-	// 	body: JSON.stringify(blogPost),
-	// };
-	const my_promise = fetch(glitchURL);
-	
-	my_promise.then(response => console.log(response));
-	my_promise.catch(error => console.log(error));
+
+	//THIS SECTION IS OLD CODE THAT I STARTED OUT WITH FOR HOVERING, AND INSTRUCTORS METHOD.
+	// const blueSquare = document.getElementById("blueSquare");
+	// const redSquare = document.getElementById("redSquare");
+	// const greenSquare = document.getElementById("greenSquare");
+	// blueSquare.onmouseover = () => blueSquare.style.backgroundColor = "blue";
+	// blueSquare.onmouseleave = () => blueSquare.style.backgroundColor = "";
+	// redSquare.onmouseover = () => redSquare.style.backgroundColor = "red";
+	// redSquare.onmouseleave = () => redSquare.style.backgroundColor = "";
+	// greenSquare.onmouseover = () => greenSquare.style.backgroundColor = "green";
+	// greenSquare.onmouseleave = () => greenSquare.style.backgroundColor = "";
+	//
+	//---^---my answer...
+	//---v----instructor...
+	// document.querySelectorAll(".square").
+	// 		forEach(function(element){
+	// 			element.addEventListener("mouseenter", function(event){
+	// 				const targetColor = event.target.dataset.color;
+	// 				event.target.style.backgroundColor = targetColor;
+	// 			});
+	// 			element.addEventListener("mouseleave", function(event){
+	// 				event.target.style.backgroundColor = "";
+	// 			});
+	// });
+	//SECTION ABOVE IS OLD CODE THAT I STARTED OUT WITH FOR HOVERING, AND INSTRUCTORS METHOD.
 	</script>
-	
-<!--	"use strict";-->
-<!--	-->
-<!--	// VARS, ARRAY, AND OBJ-->
-<!--	const glitchMovies = 'https://future-cloudy-parsnip.glitch.me/movies';-->
-<!--	-->
-<!--	-->
-<!--	/**-->
-<!--	 * FUNCTIONS-->
-<!--	 */-->
-<!--// MOVIE-->
-<!--	function getMovies() {-->
-<!--		return fetch(glitchMovies).then((response) => response.json())-->
-<!--	}-->
-<!--	function simpleCard(movie){-->
-<!--		let output = `-->
-<!--            <div class="movie-card card">-->
-<!--                <div class="card-body m-3">-->
-<!--                    <div class="card-img-top">-->
-<!--<<<<<<< HEAD-->
-<!--                    <picture>-->
-<!--                        <img src="${movie.poster}" alt="Movie Poster" class="img-thumbnail">-->
-<!--                    </picture>-->
-<!--                    </div>-->
-<!--                    <ul class="list-group">-->
-<!--                        <li>Title: ${movie.title}</li>-->
-<!--                        <li>Rating: ${movie.rating}</li>-->
-<!--                        <li>Description: ${movie.plot}</li>-->
-<!--                        <li>Genre: ${movie.genre}</li>-->
-<!--                        <li>Year: ${movie.year}</li>-->
-<!--                        <li>Director: ${movie.director}</li>-->
-<!--                        <li>Actors/Actresses: ${movie.actors}</li>-->
-<!--                        <li>ID: ${movie.id}</li>-->
-<!--                    </ul>-->
-<!--=======-->
-<!--                        <img src="${movie.poster}" alt="Movie Poster">-->
-<!--                    </div>-->
-<!--                    Title: ${movie.title} <br>-->
-<!--                    Rating: ${movie.rating} <br>-->
-<!--                    Description: ${movie.plot} <br>-->
-<!--                    Genre: ${movie.genre}<br>-->
-<!--                    Year: ${movie.year}<br>-->
-<!--                    Director: ${movie.director}<br>-->
-<!--                    Actors/Actresses: ${movie.actors}<br>-->
-<!--                    ID: ${movie.id}<br>-->
-<!--&gt;>>>>>> main-->
-<!--                </div>-->
-<!--                <div class="card-footer">-->
-<!--                    <button>Delete</button>-->
-<!--                    <button class="edit-btn">Edit</button>-->
-<!--                </div>-->
-<!--            </div>-->
-<!--            -->
-<!--            ${addJSButtons()}-->
-<!--    `-->
-<!--		// console.log(output);-->
-<!--		return output;-->
-<!--	}-->
-<!--	-->
-<!--	// MODAL-->
-<!--	function addJSButtons(){-->
-<!--		return `-->
-<!--        <script>-->
-<!--            $('.edit-btn').click( () => {-->
-<!--<<<<<<< HEAD-->
-<!--                $('#edit-modal').css('display', 'inline');-->
-<!--=======-->
-<!--                $('#edit-modal').css('display', 'block');-->
-<!--&gt;>>>>>> main-->
-<!--            })-->
-<!--            -->
-<!--            $('.close-btn').click( () => {-->
-<!--                $('#edit-modal').css('display', 'none');-->
-<!--                console.log('click')-->
-<!--            })-->
-<!--            -->
-<!--	`-->
-<!--	}-->
-<!--	-->
-<!--	// FORM-->
-<!--	const movie = {-->
-<!--	title:  "Bambi",-->
-<!--	rating: "3"-->
-<!--	}-->
-<!--	const options = {-->
-<!--	method: "POST",-->
-<!--	headers: {-->
-<!--	'Content-Type': 'application/json',-->
-<!--	},-->
-<!--	body: JSON.stringify(movie),-->
-<!--	};-->
-<!--	const fetchMovies = () => {-->
-<!--	fetch(glitchMovies, options)-->
-<!--	.then((response) => console.log(response))-->
-<!--	.catch((reject) => console.log(reject));-->
-<!--	};-->
-<!--	=======-->
-<!--	-->
-<!--	-->
-<!--	-->
-<!--	// FORM-->
-<!--	-->
-<!--	-->
-<!--	-->
-<!--	>>>>>>> main-->
-<!--	/**-->
-<!--	* ACTIVATE-->
-<!--	*/-->
-<!--	getMovies().then( (movieList) => {-->
-<!--	let output = ''-->
-<!--	for (let i = 0; i < movieList.length; i++) {-->
-<!--	output += simpleCard(movieList[i]);-->
-<!--	}-->
-<!--	$('#movie-container').html(output);-->
-<!--	})-->
-<!--	<<<<<<< HEAD-->
-<!--	//...-->
-<!--	=======-->
-<!--	-->
-<!--	-->
-<!--	>>>>>>> main-->
-<!--	-->
-<!--	-->
-<!--	-->
-<!--	-->
 </section>
 </body>
 </html>
