--- a/1-dom-warmup.html
+++ b/1-dom-warmup.html
@@ -90,7 +90,10 @@
 		// console.log(toBeYellow);
 		for (let i = 3; i < toBeYellow.length; i++) {
 			toBeYellow[i].addEventListener("click", (event) => {
-				console.log("clicked")
+				console.log(i);
+				console.log(toBeYellow[i]);
+				console.log(toBeYellow[i].classList);
+				console.log(toBeYellow[i]);
 			});
 		}
 	}
