--- a/order-pizza.html
+++ b/order-pizza.html
@@ -14,112 +14,130 @@
 <!--				</li>-->
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>Title</title>
-		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-		<style>
+<head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>Title</title>
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+	      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+	<style>
 		body {
 			margin: auto .5em;
 		}
-		</style>
-	</head>
-		<body>
-				<nav class="navbar navbar-expand-lg navbar-light bg-light">
-					<div class="container-fluid">
-						<a class="navbar-brand" href="#">Pizza World</a>
-						<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-						<span class="navbar-toggler-icon"></span></button>
-						
-						<div class="collapse navbar-collapse" id="navbarSupportedContent">
-							<ul class="navbar-nav mb-2 mb-lg-0">
-								<li class="nav-item">
-									<a class="nav-link active" aria-current="page" href="#">Order online</a>
-								</li>
-								<li class="nav-item">
-									<a class="nav-link" href="#">Menu</a>
-								</li>
-<!--								search bar-->
-								<form class="d-flex justify-content-evenly">
-								<input class="form-control me-2" type="search" placeholder="Zip Code" aria-label="Search">
-								<button class="btn btn-light btn-outline-secondary mx-auto text-nowrap" type="submit">Search stores near
-									you!</button>
-								</form>
-<!--								search bar end/ sign up link start-->
-<!--								https://getbootstrap.com/docs/5.0/utilities/position/-->
-								<li class="nav-item position-absolute end-0">
-									<a class="nav-link" aria-current="page" href="#">
-										<i class="fa fa-user" aria-hidden="true"></i>
-										Sign up
-									</a>
-								</li>
-<!--								signup link end-->
-							</ul>
-						</div>
-					</div>
-				</nav>
+	</style>
+</head>
+<body>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+	<div class="container-fluid">
+		<a class="navbar-brand" href="#">Pizza World</a>
+		<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+		        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+			<span class="navbar-toggler-icon"></span></button>
+		
+		<div class="collapse navbar-collapse" id="navbarSupportedContent">
+			<ul class="navbar-nav mb-2 mb-lg-0">
+				<li class="nav-item">
+					<a class="nav-link active" aria-current="page" href="#">Order online</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="#">Menu</a>
+				</li>
+				<!--								search bar-->
+				<form class="d-flex justify-content-evenly">
+					<input class="form-control me-2" type="search" placeholder="Zip Code" aria-label="Search">
+					<button class="btn btn-light btn-outline-secondary mx-auto text-nowrap" type="submit">Search stores
+						near
+						you!
+					</button>
+				</form>
+				<!--								search bar end/ sign up link start-->
+				<!--								https://getbootstrap.com/docs/5.0/utilities/position/-->
+				<li class="nav-item position-absolute end-0">
+					<a class="nav-link" aria-current="page" href="#">
+						<i class="fa fa-user" aria-hidden="true"></i>
+						Sign up
+					</a>
+				</li>
+				<!--								signup link end-->
+			</ul>
+		</div>
+	</div>
+</nav>
 <!--				header-->
-				<div class="container-fluid px-0 py-5 my-4 bg-light text-center" style="background-image:url('images/pizzawebsite.jpg')">
-					<h1 class="display-4 bg-light opacity-75">Welcome to Pizza World</h1>
-				</div>
+<div class="container-fluid px-0 py-5 my-4 bg-light text-center"
+     style="background-image:url('images/pizzawebsite.jpg')">
+	<h1 class="display-4 bg-light opacity-75">Welcome to Pizza World</h1>
+</div>
 <!--				end of header/start card form-->
-				<br><h3>Build your own pizza!</h3>
-				<!--card-->
-				<div class="card min-vw-75">
-					<div class="card-header bg-primary text-white">
-						Choose a size and crust
-					</div>
-					<div class="card-body ">
-				<!--		card-->
-						<div class="card-body border">
-							<div class="card" style="width: auto;">
-							<div class="card-header">
-								Hand Tossed
-							</div>
-							<ul class="list-group list-group-flush">
-								<li class="list-group-item">Garlic seasoned crust with a rich, buttery taste.</li>
-								<li class="list-group-item"><div class="form-check">
-									<input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
-									<label class="form-check-label" for="flexRadioDefault1">
-										Small(10")
-									</label>
-								</div></li>
-								<li class="list-group-item"><div class="form-check">
-									<input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
-									<label class="form-check-label" for="flexRadioDefault1">
-										Medium(12")
-									</label>
-								</div></li>
-							</ul>
-							</div></div>
-						<div class="card-body border">
-						<div class="card" style="width: auto;">
-							<div class="card-header">
-								Crispy Thin
-							</div>
-							<ul class="list-group list-group-flush">
-								<li class="list-group-item">Thin enough for optimum crispy to crunchy ration.</li>
-								<li class="list-group-item"><div class="form-check">
-									<input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
-									<label class="form-check-label" for="flexRadioDefault1">
-										Medium(12")
-									</label>
-								</div></li>
-								<li class="list-group-item"><div class="form-check">
-									<input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
-									<label class="form-check-label" for="flexRadioDefault1">
-										Large(14")
-									</label>
-								</div></li>
-							</ul>
-						</div></div>
-				<!--		card-->
-					</div>
-					<div class="card-footer text-end"><a href="#" class="btn btn-primary">Select</a></div>
+<br>
+<h3>Build your own pizza!</h3>
+<!--card-->
+<div class="card min-vw-75">
+	<div class="card-header bg-primary text-white">
+		Choose a size and crust
+	</div>
+	<div class="card-body ">
+		<!--		card-->
+		<div class="card-body border">
+			<div class="card" style="width: auto;">
+				<div class="card-header">
+					Hand Tossed
 				</div>
+				<ul class="list-group list-group-flush">
+					<li class="list-group-item">Garlic seasoned crust with a rich, buttery taste.</li>
+					<li class="list-group-item">
+						<div class="form-check">
+							<input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault0">
+							<label class="form-check-label" for="flexRadioDefault1">
+								Small(10")
+							</label>
+						</div>
+					</li>
+					<li class="list-group-item">
+						<div class="form-check">
+							<input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
+							<label class="form-check-label" for="flexRadioDefault1">
+								Medium(12")
+							</label>
+						</div>
+					</li>
+				</ul>
+			</div>
+		</div>
+		<div class="card-body border">
+			<div class="card" style="width: auto;">
+				<div class="card-header">
+					Crispy Thin
+				</div>
+				<ul class="list-group list-group-flush">
+					<li class="list-group-item">Thin enough for optimum crispy to crunchy ration.</li>
+					<li class="list-group-item">
+						<div class="form-check">
+							<input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault2">
+							<label class="form-check-label" for="flexRadioDefault1">
+								Medium(12")
+							</label>
+						</div>
+					</li>
+					<li class="list-group-item">
+						<div class="form-check">
+							<input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault3">
+							<label class="form-check-label" for="flexRadioDefault1">
+								Large(14")
+							</label>
+						</div>
+					</li>
+				</ul>
+			</div>
+		</div>
+		<!--		card-->
+	</div>
+	<div class="card-footer text-end"><a href="#" class="btn btn-primary">Select</a></div>
+</div>
 <!--				bootstrap script-->
-			<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-		</body>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script>
+</body>
 </html>
