--- a/JQuery_JSON_AJAX.html
+++ b/JQuery_JSON_AJAX.html
@@ -4,10 +4,15 @@
 	<meta charset="UTF-8">
 	<title>Title</title>
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+	<style>
+		#printmehere {
+			color: #547a4b;
+		}
+	</style>
 </head>
 <body>
 
-
+<span id="printmehere"></span>
 
 <script src="https://code.jquery.com/jquery-2.2.4.min.js"
         integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="
@@ -15,7 +20,17 @@
 <script>
 	$.ajax('https://swapi.dev/api/people/20').done(function(data) {
 		console.log(data);
-	})
+		console.log(data.name);
+		console.log(data.name.toUpperCase());
+		let thespan = document.getElementById('printmehere');
+		thespan.innerHTML = `
+		<h1>
+		${data.name}
+		</h1>
+		`
+	});
+
+
 </script>
 </body>
 
